--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "express": "^4.18.2",
+    "leader-line": "^1.0.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
+    "react-leader-line": "^1.0.5",
     "react-resizable": "^3.0.5",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
